--- a/lib/tag-persistence/tag-persistence-api/pom.xml
+++ b/lib/tag-persistence/tag-persistence-api/pom.xml
@@ -8,6 +8,9 @@
   </parent>
 
   <artifactId>tag-persistence-api</artifactId>
+  <packaging>jar</packaging>
+  <name>Tag Persistence API</name>
+  <description>API to persist tags of the place-and-break patch</description>
 
   <properties>
     <main.basedir>${project.basedir}/../../..</main.basedir>
