--- a/lib/tag-persistence/tag-persistence-inmemory/pom.xml
+++ b/lib/tag-persistence/tag-persistence-inmemory/pom.xml
@@ -8,6 +8,9 @@
   </parent>
 
   <artifactId>tag-persistence-inmemory</artifactId>
+  <packaging>jar</packaging>
+  <name>Tag Persistence InMemory Implementation</name>
+  <description>InMemory implementation of tag persistence (for tests purpose)</description>
 
   <properties>
     <main.basedir>${project.basedir}/../../..</main.basedir>
