--- a/lib/tag-persistence/tag-persistence-patch-connector/pom.xml
+++ b/lib/tag-persistence/tag-persistence-patch-connector/pom.xml
@@ -8,6 +8,9 @@
   </parent>
 
   <artifactId>tag-persistence-patch-connector</artifactId>
+  <packaging>jar</packaging>
+  <name>Tag Persistence Patch Connector</name>
+  <description>Permits to connect the place-and-break patch and the persistence modules together</description>
 
   <properties>
     <main.basedir>${project.basedir}/../../..</main.basedir>
