--- a/plugin/plugin-bukkit/src/main/resources/plugin.yml
+++ b/plugin/plugin-bukkit/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
-name: ${name}
+name: ${plugin.name}
 version: ${version}
 author: Djaytan
 api-version: 1.13
-main: ${package.root}.plugin.JobsRebornPatchPlaceBreakPlugin
+main: ${package.root}.bukkit.JobsRebornPatchPlaceBreakPlugin
 depend: [Jobs]
