build: improve CI pipeline speed

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,17 +19,14 @@ jobs:
           name: 'mvn/build'
           command: mvn $MAVEN_CLI_OPTS compile
       - run:
-          name: 'mvn/test'
+          name: 'mvn/unitTests'
           command: mvn $MAVEN_CLI_OPTS test
       - run:
-          name: 'mvn/package'
-          command: mvn $MAVEN_CLI_OPTS package -DskipUnitTests
-      - run:
-          name: 'mvn/verify'
+          name: 'mvn/integrationTests'
           command: mvn $MAVEN_CLI_OPTS verify -DskipUnitTests
       - run:
           name: 'sonar/analysis'
-          command: mvn $MAVEN_CLI_OPTS verify sonar:sonar -DskipTests
+          command: mvn $MAVEN_CLI_OPTS verify sonar:sonar -Dmaven.test.skip=true
       - save_cache:
           name: 'cache/save'
           key: 'v2-maven-local-repository-cache-{{ checksum "pom.xml" }}'
