--- a/pom.xml
+++ b/pom.xml
@@ -455,6 +455,7 @@
         <groupId>org.sonarsource.scanner.maven</groupId>
         <artifactId>sonar-maven-plugin</artifactId>
         <version>${sonarMavenPlugin.version}</version>
+        <inherited>false</inherited>
       </plugin>
     </plugins>
   </build>
